aggiunti logo,root colori e sistemati commenti

--- a/index.html
+++ b/index.html
@@ -5,16 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
+
+    <!-- FONTS -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <!-- CSS -->
+
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
+<!-- DEBUG -->
 
 <body class="debug">
     <header>
         <div class="header-bg">
-            <!-- navbar -->
+            <!-- NAVBAR -->
             <div class="navbar container">
-                <div class="logo"> LOGO</div>
+                <div class="logo">
+                    <img src="./assets/img/logo.svg" alt="">
+                </div>
                 <nav class="menu">
                     <a href="">Scarica</a>
                     <a href="">Perchè Discord</a>
@@ -29,7 +42,7 @@
 
     <main>
 
-        <!-- intestazione -->
+        <!-- JUMBOTRON -->
         <div class="jumbotron">
             <div class="container-small title">
                 <h1>Lorem ipsum dolor</h1>
@@ -45,10 +58,11 @@
                 </div>
             </div>
         </div>
-        <!-- inizio sezioni -->
+
+        <!-- INIZIO SEZIONI -->
 
 
-        <!-- prima sezione -->
+        <!-- Prima Sezione -->
 
         <section class="bg-white">
             <div class="container main-section">
@@ -67,7 +81,7 @@
             </div>
         </section>
 
-        <!-- seconda sezione -->
+        <!-- Seconda Sezione -->
 
         <section class="bg-lightgray">
             <div class="container main-section reverse">
@@ -85,7 +99,7 @@
                     cumque sunt?</div>
             </div>
         </section>
-        <!-- terza sezione -->
+        <!-- Terza Sezione -->
 
         <section class="bg-white">
             <div class="container main-section">
@@ -104,7 +118,7 @@
             </div>
         </section>
 
-        <!-- quarta sezione -->
+        <!-- Quarta Sezione -->
 
         <section class="bg-lightgray">
             <div class="container last-section">
@@ -119,9 +133,11 @@
         </section>
     </main>
 
+    <!-- FOOTER -->
+
     <footer id="menu-footer">
 
-        <!-- menu footer -->
+        <!-- Menu Social -->
 
         <div class="container footer-container">
             <div class="social">
@@ -143,7 +159,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- sezione prodotto -->
+            <!-- Sezione Prodotto -->
             <div class="prodotto">
                 <ul class="link-footer">
                     <li>
@@ -157,7 +173,9 @@
                 </ul>
             </div>
 
-            <!--sezione compagnia -->
+            <!-- MENU FOOTER -->
+
+            <!--Sezione Compagnia -->
 
             <div class="compagnia">
                 <ul class="link-footer">
@@ -172,7 +190,7 @@
                 </ul>
             </div>
 
-            <!-- sezione risorse-->
+            <!-- Sezione Risorse-->
 
             <div class="risorse">
                 <ul class="link-footer">
@@ -194,6 +212,9 @@
                     <li><a href="">Assistenza</a></li>
                 </ul>
             </div>
+
+            <!-- Sezione Norme -->
+
             <div class="norme">
                 <ul class="link-footer">
                     <li>
@@ -209,6 +230,9 @@
             </div>
 
         </div>
+
+        <!-- LOGIN FOOTER -->
+
         <div class="separator "></div>
         <div class="container">
             <span>LOGO</span>
