Finito di sistemare i commenti e completata navbar

--- a/index.html
+++ b/index.html
@@ -26,25 +26,29 @@
             <!-- NAVBAR -->
             <div class="navbar container">
                 <div class="logo">
-                    <img src="./assets/img/logo.svg" alt="">
+                    <img src="./assets/img/logo.svg" alt="discord-logo">
                 </div>
-                <nav class="menu">
+                <nav class="menu-header">
                     <a href="">Scarica</a>
                     <a href="">Perchè Discord</a>
                     <a href="">Nitro</a>
                     <a href="">Sicurezza</a>
                     <a href="">Assistenza</a>
                 </nav>
-                <button class="login">Accedi</button>
+                <span class="log">
+                    <button class="btn btn-white">Accedi</button>
+                </span>
             </div>
         </div>
     </header>
+
+<!-- MAIN -->
 
     <main>
 
         <!-- JUMBOTRON -->
         <div class="jumbotron">
-            <div class="container-small title">
+            <div class="container-sm title">
                 <h1>Lorem ipsum dolor</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sequi dolorem deleniti dicta
                     aspernatur
@@ -52,7 +56,7 @@
                     laborum
                     aperiam dolorum, eos molestiae!</p>
                 <div>
-                    <button class="btn btn-white">Scarica per Mac</button>
+                    <button class="btn btn-white"> &downarrow; Scarica per Mac</button>
 
                     <button class=" btn btn-black">Apri Discord nel tuo browser</button>
                 </div>
@@ -84,7 +88,7 @@
         <!-- Seconda Sezione -->
 
         <section class="bg-lightgray">
-            <div class="container main-section reverse">
+            <div class="container main-section sp-btw reverse">
                 <div class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ipsa aliquid
                     voluptatum itaque in natus harum, qui a? Itaque officia aliquid quae! Officia quidem eos ipsum aut
                     minus assumenda? Officia!</div>
@@ -126,7 +130,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aspernatur quidem at recusandae
                     exercitationem quasi ex mollitia cum dolorem, voluptatem nam error incidunt eveniet. Ipsum harum id
                     iure perferendis ipsam.</p>
-                <span>IMMAGINE</span>
+                <div class="big-img">IMMAGINE</div>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <button class="btn bg-lightblue">Scarica per Mac</button>
             </div>
@@ -140,7 +144,7 @@
         <!-- Menu Social -->
 
         <div class="container footer-container">
-            <div class="social">
+            <div class="social-menu">
                 <ul class="link-footer">
                     <li>
                         <h3>Il tuo posto per parlare</h3>
@@ -160,7 +164,7 @@
                 </ul>
             </div>
             <!-- Sezione Prodotto -->
-            <div class="prodotto">
+            <div class="menu-footer">
                 <ul class="link-footer">
                     <li>
                         <h3>Prodotto</h3>
@@ -177,7 +181,7 @@
 
             <!--Sezione Compagnia -->
 
-            <div class="compagnia">
+            <div class="menu-footer">
                 <ul class="link-footer">
                     <li>
                         <h3>Compagnia</h3>
@@ -192,7 +196,7 @@
 
             <!-- Sezione Risorse-->
 
-            <div class="risorse">
+            <div class="menu-footer">
                 <ul class="link-footer">
                     <li>
                         <h3>Risorse</h3>
@@ -215,7 +219,7 @@
 
             <!-- Sezione Norme -->
 
-            <div class="norme">
+            <div class="menu-footer">
                 <ul class="link-footer">
                     <li>
                         <h3>Norme</h3>
@@ -234,7 +238,7 @@
         <!-- LOGIN FOOTER -->
 
         <div class="separator "></div>
-        <div class="container">
+        <div class="container sp-btw">
             <span>LOGO</span>
             <button class="registrati btn">Registrati
             </button>
