completato design prima sezione e impostato per le prossime

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!-- DEBUG -->
 
-<body class="debug">
+<body class="debg">
     <header>
         <div class="header-bg">
             <!-- NAVBAR -->
@@ -49,12 +49,10 @@
         <!-- JUMBOTRON -->
         <div class="jumbotron">
             <div class="container-sm title">
-                <h1>Lorem ipsum dolor</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat sequi dolorem deleniti dicta
-                    aspernatur
-                    facilis sapiente dignissimos expedita accusantium. Magnam iste velit tempora architecto nesciunt
-                    laborum
-                    aperiam dolorum, eos molestiae!</p>
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                    semplicemente di un piccolo gruppo di amici che vuole passare del tempo insieme, Discord rende più
+                    facile chiacchierare ogni giorno e ritrovarsi più spesso. </p>
                 <div>
                     <button class="btn btn-white"> &downarrow; Scarica per Mac</button>
 
@@ -70,18 +68,12 @@
 
         <section class="bg-white">
             <div class="container main-section">
-                <div class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ipsa aliquid
-                    voluptatum itaque in natus harum, qui a? Itaque officia aliquid quae! Officia quidem eos ipsum aut
-                    minus assumenda? Officia!</div>
-                <div class="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consequuntur ab
-                    laboriosam quisquam voluptate magnam sunt adipisci numquam! Dolorem magni veniam ullam dolor odit
-                    non itaque illum repellendus veritatis quia!
-                    Itaque obcaecati dolores est exercitationem laborum impedit harum blanditiis ipsa. Voluptas, quidem
-                    minus hic dolores, illum maxime harum fuga officia provident eius magnam exercitationem beatae earum
-                    aliquid! Ducimus, sequi veritatis.
-                    Ipsam laboriosam ipsa a cumque nobis. Dolor iste libero commodi eos asperiores rerum nisi ea
-                    quisquam atque accusamus, ullam soluta tempore natus fugit magnam distinctio. Animi harum ullam
-                    cumque sunt?</div>
+                <div class="w-60">
+                    <img src="./assets/img/item1.svg" alt="study-group">
+                </div>
+                <div class="w-40 ptop-30"> <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                        semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p></div>
             </div>
         </section>
 
@@ -89,10 +81,10 @@
 
         <section class="bg-lightgray">
             <div class="container main-section sp-btw reverse">
-                <div class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ipsa aliquid
+                <div class="w-60">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ipsa aliquid
                     voluptatum itaque in natus harum, qui a? Itaque officia aliquid quae! Officia quidem eos ipsum aut
                     minus assumenda? Officia!</div>
-                <div class="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consequuntur ab
+                <div class="w-40 p-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consequuntur ab
                     laboriosam quisquam voluptate magnam sunt adipisci numquam! Dolorem magni veniam ullam dolor odit
                     non itaque illum repellendus veritatis quia!
                     Itaque obcaecati dolores est exercitationem laborum impedit harum blanditiis ipsa. Voluptas, quidem
@@ -107,10 +99,10 @@
 
         <section class="bg-white">
             <div class="container main-section">
-                <div class="left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ipsa aliquid
+                <div class="w-60">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ipsa aliquid
                     voluptatum itaque in natus harum, qui a? Itaque officia aliquid quae! Officia quidem eos ipsum aut
                     minus assumenda? Officia!</div>
-                <div class="right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consequuntur ab
+                <div class="w-40 ptop-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consequuntur ab
                     laboriosam quisquam voluptate magnam sunt adipisci numquam! Dolorem magni veniam ullam dolor odit
                     non itaque illum repellendus veritatis quia!
                     Itaque obcaecati dolores est exercitationem laborum impedit harum blanditiis ipsa. Voluptas, quidem
