completate sezioni(manca wave)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </header>
 
-<!-- MAIN -->
+    <!-- MAIN -->
 
     <main>
 
@@ -71,9 +71,11 @@
                 <div class="w-60">
                     <img src="./assets/img/item1.svg" alt="study-group">
                 </div>
-                <div class="w-40 ptop-30"> <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <div class="w-40 ptop-30">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                     <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
-                        semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p></div>
+                        semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
         </section>
 
@@ -81,36 +83,31 @@
 
         <section class="bg-lightgray">
             <div class="container main-section sp-btw reverse">
-                <div class="w-60">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ipsa aliquid
-                    voluptatum itaque in natus harum, qui a? Itaque officia aliquid quae! Officia quidem eos ipsum aut
-                    minus assumenda? Officia!</div>
-                <div class="w-40 p-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consequuntur ab
-                    laboriosam quisquam voluptate magnam sunt adipisci numquam! Dolorem magni veniam ullam dolor odit
-                    non itaque illum repellendus veritatis quia!
-                    Itaque obcaecati dolores est exercitationem laborum impedit harum blanditiis ipsa. Voluptas, quidem
-                    minus hic dolores, illum maxime harum fuga officia provident eius magnam exercitationem beatae earum
-                    aliquid! Ducimus, sequi veritatis.
-                    Ipsam laboriosam ipsa a cumque nobis. Dolor iste libero commodi eos asperiores rerum nisi ea
-                    quisquam atque accusamus, ullam soluta tempore natus fugit magnam distinctio. Animi harum ullam
-                    cumque sunt?</div>
+                <div class="w-60">
+                    <img src="./assets/img/item2.svg" alt="just-chill">
+                </div>
+                <div class="w-40 p-30">
+                    <h2>Dove trovarsi è facile</h2>
+                    <p>
+                        Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo servere possono vedere
+                        che sei li e unirsi istantaneamente senza dover chiamare.
+                    </p>
+                </div>
             </div>
         </section>
         <!-- Terza Sezione -->
 
         <section class="bg-white">
             <div class="container main-section">
-                <div class="w-60">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat ipsa aliquid
-                    voluptatum itaque in natus harum, qui a? Itaque officia aliquid quae! Officia quidem eos ipsum aut
-                    minus assumenda? Officia!</div>
-                <div class="w-40 ptop-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non consequuntur ab
-                    laboriosam quisquam voluptate magnam sunt adipisci numquam! Dolorem magni veniam ullam dolor odit
-                    non itaque illum repellendus veritatis quia!
-                    Itaque obcaecati dolores est exercitationem laborum impedit harum blanditiis ipsa. Voluptas, quidem
-                    minus hic dolores, illum maxime harum fuga officia provident eius magnam exercitationem beatae earum
-                    aliquid! Ducimus, sequi veritatis.
-                    Ipsam laboriosam ipsa a cumque nobis. Dolor iste libero commodi eos asperiores rerum nisi ea
-                    quisquam atque accusamus, ullam soluta tempore natus fugit magnam distinctio. Animi harum ullam
-                    cumque sunt?</div>
+                <div class="w-60">
+                    <img src="./assets/img/item3.svg" alt="coach">
+                </div>
+                <div class="w-40 ptop-30">
+                    <h2>Da pochi a un fandom</h2>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai
+                        membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -131,7 +128,7 @@
 
     <!-- FOOTER -->
 
-    <footer id="menu-footer">
+    <footer id="footer">
 
         <!-- Menu Social -->
 
