finita ultima sezione e aggiunto logo nel footer

--- a/index.html
+++ b/index.html
@@ -115,13 +115,17 @@
 
         <section class="bg-lightgray">
             <div class="container last-section">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere aspernatur quidem at recusandae
-                    exercitationem quasi ex mollitia cum dolorem, voluptatem nam error incidunt eveniet. Ipsum harum id
-                    iure perferendis ipsam.</p>
-                <div class="big-img">IMMAGINE</div>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <button class="btn bg-lightblue">Scarica per Mac</button>
+                <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
+                    video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la
+                    condivisione schermo.</p>
+                <div class="big-img">
+                    <img src="./assets/img/item4-big.svg" alt="">
+                </div>
+                <div class="text-with-stars">
+                    <strong>Pronto a iniziare la tua avventura?</strong>
+                </div>
+                <button class="btn btn-lightblue">&downarrow; Scarica per Mac</button>
             </div>
         </section>
     </main>
@@ -228,8 +232,8 @@
 
         <div class="separator "></div>
         <div class="container sp-btw">
-            <span>LOGO</span>
-            <button class="registrati btn">Registrati
+            <img src="./assets/img/logo.svg" alt="logo-discord">
+            <button class="btn btn-lightblue">Registrati
             </button>
         </div>
 
