--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                     </li>
                     <li>
                         <span>
-                            <img src="" alt="">
+                            <img src="./assets/img/ita.png" alt="ita">
                             Italiano &DownArrow;
                         </span>
                     </li>
-                    <li class=".inline">
+                    <li>
                         <a href=""><img src="" alt="" class="logo-twitter"></a>
                         <a href=""><img src="" alt="" class="logo-instagram"></a>
                         <a href=""><img src="" alt="" class="logo-facebook"></a>
