finito tutto tranne loghi footer

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             </div>
         </section>
 
+        <!-- effetto onda -->
+
+        <div class="wave">
+            <img src="./assets/img/wave.svg" alt="wave">
+        </div>
+
         <!-- Seconda Sezione -->
 
         <section class="bg-lightgray">
@@ -95,6 +101,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- effetto onda -->
+        <div class="wave reverse-wave">
+            <img src="./assets/img/wave.svg" alt="wave">
+        </div>
+
+
         <!-- Terza Sezione -->
 
         <section class="bg-white">
@@ -110,6 +123,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- effetto onda -->
+
+        <div class="wave">
+            <img src="./assets/img/wave.svg" alt="wave">
+        </div>
+
 
         <!-- Quarta Sezione -->
 
