--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
 
 <!-- DEBUG -->
 
-<body class="debg">
+<body class="debug">
+
+    <!-- NAVBAR -->
+
     <header>
         <div class="header-bg">
-            <!-- NAVBAR -->
+
+
+
             <div class="navbar container">
                 <div class="logo">
                     <img src="./assets/img/logo.svg" alt="discord-logo">
