--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                             <img src="./assets/img/instagram-logo.png" alt="logo-instagram">
                         </a>
                         <a href="">
-                            <img src="./assets/img/facebook-logo.png" alt="logo-facebook" class="logo-facebook">
+                            <img src="./assets/img/facebook-logo.png" alt="logo-facebook" class="logos-align">
                         </a>
                         <a href="">
-                            <img src="./assets/img/youtube-logo.jpeg" alt="logo-youtube" class="logo-youtube">
+                            <img src="./assets/img/youtube-logo.jpeg" alt="logo-youtube" class="logos-align">
                         </a>
                     </li>
                 </ul>
